--- a/module1/blocks/page/page.css
+++ b/module1/blocks/page/page.css
@@ -17,7 +17,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 65px 0 0 240px;
+  padding: 65px 0;
   display: flex;
   flex-direction: column;
 }
