--- a/module1/blocks/about-us/__text/about-us__text.css
+++ b/module1/blocks/about-us/__text/about-us__text.css
@@ -1,6 +1,6 @@
 .about-us__text {
-    font-size: 18px;
-    line-height: 1.6;
-    color: #4B5D68;
-    margin-top: 40px;
+  font-size: 18px;
+  line-height: 1.6;
+  color: #4b5d68;
+  margin-top: 40px;
 }
