--- a/module1/blocks/intro/intro.css
+++ b/module1/blocks/intro/intro.css
@@ -1,6 +1,6 @@
 .intro {
-    padding: 143px 0 99px;
-    width: 1248px;
-    max-width: 1248px;
-    display: grid;
+  padding-bottom: 99px;
+  width: 1248px;
+  max-width: 1248px;
+  display: grid;
 }
