--- a/module1/blocks/slider/__item-text/slider__item-text.css
+++ b/module1/blocks/slider/__item-text/slider__item-text.css
@@ -1,6 +1,7 @@
 .slider__item-text {
-    font-size: 18px;
-    line-height: 1.8;
-    color: #4B5D68;
-    margin-top: 19px;
+  font-size: 18px;
+  line-height: 1.8;
+  margin: 19px 0 0 0;
+  max-width: 385px;
+  height: 130px;
 }
