--- a/module1/index.css
+++ b/module1/index.css
@@ -31,9 +31,22 @@
 @import url(./blocks/slider/__title/slider__title.css);
 @import url(./blocks/slider/__list/slider_list.css);
 @import url(./blocks/slider/__item/slider__item.css);
+@import url(./blocks/slider/__item/_second/slider__item_second.css);
+@import url(./blocks/slider/__item/_third/slider__item_third.css);
 @import url(./blocks/slider/__item-avatar/slider__item-avatar.css);
+@import url(./blocks/slider/__item-avatar/_unactive/slider__item-avatar_unactive.css);
 @import url(./blocks/slider/__item-container/slider__item-container.css);
 @import url(./blocks/slider/__item-container/_active/slider__item-container_active.css);
 @import url(./blocks/slider/__item-name/slider__item-name.css);
 @import url(./blocks/slider/__item-profession/slider__item-profession.css);
 @import url(./blocks/slider/__item-text/slider__item-text.css);
+@import url(./blocks/slider/__item-text/_unactive/slider__item-text_unactive.css);
+@import url(./blocks/slider/__nav/slider__nav.css);
+@import url(./blocks/slider/__dots/slider__dots.css);
+@import url(./blocks/slider/__dot/slider__dot.css);
+@import url(./blocks/slider/__dot/_active/slider__dot_active.css);
+@import url(./blocks/slider/__arrows/slider__arrows.css);
+@import url(./blocks/slider/__arrow/slider__arrow.css);
+@import url(./blocks/slider/__arrow/_prev/slider__arrow_prev.css);
+@import url(./blocks/slider/__arrow/_next/slider__arrow_next.css);
+@import url(./blocks/footer/footer.css);
