--- a/module1/blocks/feature/__text/feature__text.css
+++ b/module1/blocks/feature/__text/feature__text.css
@@ -1,7 +1,7 @@
 .feature__text {
-    margin: 0;
-    font-size: 16px;
-    line-height: 1.6;
-    color: #4B5D68;
-    max-height: 160px;
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #4b5d68;
+  max-height: 160px;
 }
