--- a/module1/blocks/intro/__btn/intro__btn.css
+++ b/module1/blocks/intro/__btn/intro__btn.css
@@ -1,12 +1,12 @@
 .intro__btn {
-    border: none;
-    border-radius: 50px;
-    padding: 0;
-    width: 170px;
-    height: 60px;
-    background-color: #9C69E2;
-    color: white;
-    font-size: 18px;
-    line-height: 1.6;
-    cursor: pointer;
+  border: none;
+  border-radius: 50px;
+  padding: 0;
+  width: 170px;
+  height: 60px;
+  background-color: #9c69e2;
+  color: white;
+  font-size: 18px;
+  line-height: 1.6;
+  cursor: pointer;
 }
