--- a/module1/blocks/intro/__text/intro__text.css
+++ b/module1/blocks/intro/__text/intro__text.css
@@ -1,8 +1,8 @@
 .intro__text {
-    font-size: 18px;
-    line-height: 1.6;
-    margin: 0;
-    color: #4B5D68;
-    font-weight: 500;
-    max-width: 380px;
+  font-size: 18px;
+  line-height: 1.6;
+  margin: 0;
+  color: #4b5d68;
+  font-weight: 500;
+  max-width: 380px;
 }
