--- a/module1/blocks/slider/__item/slider__item.css
+++ b/module1/blocks/slider/__item/slider__item.css
@@ -1,17 +1,17 @@
 .slider__item {
-    max-width: 400px;
-    height: 330px;
-    display: flex;
-    background-color: white;
-    border: #9C69E2 1px;
-    border-radius: 20px;
-    padding: 55px 60px 55px 40px;
-    margin-right: 20px;
-    box-shadow: 0px 20px 0px rgba(156, 105, 226, 0.3);
-    box-sizing: border-box;
+  max-width: 400px;
+  height: 330px;
+  display: flex;
+  background-color: white;
+  border: 1px solid #9c69e2;
+  border-radius: 20px;
+  padding: 55px 60px 55px 40px;
+  margin-right: 20px;
+  box-shadow: 0px 20px 0px rgba(156, 105, 226, 0.3);
+  box-sizing: border-box;
 }
 
 .slider__item:first-of-type {
-    max-width: 645px;
-    padding: 60px 70px 50px 70px;
+  max-width: 645px;
+  padding: 60px 70px 50px 70px;
 }
