--- a/module1/blocks/about-us/__img-container/about-us__img-container.css
+++ b/module1/blocks/about-us/__img-container/about-us__img-container.css
@@ -1,6 +1,6 @@
 .about-us__img-container {
-  background-image: url(../../../images/aboutUs.png);
-  width: 469px;
-  height: 496px;
+  width: 41.987%;
+  max-width: 469px;
+  max-height: 496px;
   margin: 0 65px 0 16px;
 }
