--- a/module1/blocks/footer/footer.css
+++ b/module1/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
   display: flex;
+  justify-content: space-between;
   padding-top: 123px;
-  width: 100%;
-  border-top: 2px solid rgba(156, 105, 226, 0.2);
+  max-width: 1085px;
+  color: #212353;
 }
