--- a/module1/blocks/intro/__img-container/intro__img-container.css
+++ b/module1/blocks/intro/__img-container/intro__img-container.css
@@ -1,7 +1,7 @@
 .intro__img-container {
-  width: 885px;
-  height: 468px;
-  background-image: url(../../../images/intro.png);
+  width: 70.913%;
+  max-width: 885px;
+  max-height: 468px;
   grid-column: 1/2;
   grid-row: 1/2;
   justify-self: end;
