--- a/module1/blocks/page/page.css
+++ b/module1/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   min-width: 320px;
-  max-width: 1280px;
+  max-width: 1600px;
   min-height: 100vh;
   width: 100%;
   -webkit-font-smoothing: antialiased;
@@ -9,7 +9,7 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-  font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+  font-family: "Ubuntu", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   box-sizing: border-box;
@@ -17,7 +17,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 65px 0;
+  padding: 65px 0 65px 15%;
   display: flex;
   flex-direction: column;
 }
