--- a/module1/blocks/slider/__item/_third/slider__item_third.css
+++ b/module1/blocks/slider/__item/_third/slider__item_third.css
@@ -1,7 +1,7 @@
 .slider__item_third {
   position: absolute;
   top: 0;
-  right: -460px;
+  right: 0;
   margin-right: 0;
   text-overflow: ellipsis;
 }
