--- a/module1/index.css
+++ b/module1/index.css
@@ -50,3 +50,14 @@
 @import url(./blocks/slider/__arrow/_prev/slider__arrow_prev.css);
 @import url(./blocks/slider/__arrow/_next/slider__arrow_next.css);
 @import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__text-container/footerr__text-container.css);
+@import url(./blocks/footer/__logo-container/footer__logo-container.css);
+@import url(./blocks/footer/__logo-title/footer__logo-title.css);
+@import url(./blocks/footer/__info-adress/footer__info-adress.css);
+@import url(./blocks/footer/__info-contacts/footer__info-contacts.css);
+@import url(./blocks/footer/__copyright/footer__copyright.css);
+@import url(./blocks/footer/__nav/footer__nav.css);
+@import url(./blocks/footer/_icon/footer__icon.css);
+@import url(./blocks/footer/__nav-title/footer__nav-title.css);
+@import url(./blocks/footer/__links/footer__links.css);
+@import url(./blocks/footer/__link/footer__link.css);
