--- a/module1/blocks/features/features.css
+++ b/module1/blocks/features/features.css
@@ -6,3 +6,9 @@
   align-items: center;
   max-width: 1120px;
 }
+
+@media screen and (max-width: 1280px) {
+  .features {
+    margin: 0 auto;
+  }
+}
