--- a/module1/blocks/page/page.css
+++ b/module1/blocks/page/page.css
@@ -17,7 +17,8 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 65px 0 65px 15%;
+  padding: 65px 0;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
