--- a/module1/blocks/slider/__item/_third/slider__item_third.css
+++ b/module1/blocks/slider/__item/_third/slider__item_third.css
@@ -5,3 +5,9 @@
   margin-right: 0;
   text-overflow: ellipsis;
 }
+
+@media screen and (max-width: 1280px) {
+  .slider__item_third {
+    display: none;
+  }
+}
