--- a/module1/blocks/about-us/__img-container/about-us__img-container.css
+++ b/module1/blocks/about-us/__img-container/about-us__img-container.css
@@ -4,3 +4,9 @@
   max-height: 496px;
   margin: 0 65px 0 16px;
 }
+
+@media screen and (max-width: 1024px) {
+  .about-us__img-container {
+    margin: 0;
+  }
+}
