--- a/module1/blocks/about-us/__text/about-us__text.css
+++ b/module1/blocks/about-us/__text/about-us__text.css
@@ -4,3 +4,10 @@
   color: #4b5d68;
   margin-top: 40px;
 }
+
+@media screen and (max-width: 568px) {
+  .about-us__text {
+    font-size: 16px;
+    margin: 30px 0 0 0;
+  }
+}
