--- a/module1/blocks/features/__subtitle/features__subtitle.css
+++ b/module1/blocks/features/__subtitle/features__subtitle.css
@@ -7,3 +7,9 @@
   text-align: center;
   margin: 50px 0 100px;
 }
+
+@media screen and (max-width: 1000px) {
+  .features__subtitle {
+    margin: 30px 0 80px;
+  }
+}
