--- a/module1/blocks/footer/__main-container/footer__main-container.css
+++ b/module1/blocks/footer/__main-container/footer__main-container.css
@@ -5,3 +5,9 @@
   width: 100%;
   max-width: 1085px;
 }
+
+@media screen and (max-width: 1024px) {
+  .footer__main-container {
+    width: calc(100% - 40px);
+  }
+}
