--- a/module1/blocks/intro/__text-container/intro__text-container.css
+++ b/module1/blocks/intro/__text-container/intro__text-container.css
@@ -9,3 +9,10 @@
   font-size: 18px;
   line-height: 1.6;
 }
+
+@media screen and (max-width: 1000px) {
+  .intro__text-container {
+    justify-items: center;
+    gap: 25px;
+  }
+}
