--- a/module1/blocks/intro/__text/intro__text.css
+++ b/module1/blocks/intro/__text/intro__text.css
@@ -4,3 +4,11 @@
   font-weight: 500;
   max-width: 380px;
 }
+
+@media screen and (max-width: 1000px) {
+  .intro__text {
+    width: calc(100% - 20px);
+    max-width: 645px;
+    text-align: center;
+  }
+}
