--- a/module1/blocks/intro/intro.css
+++ b/module1/blocks/intro/intro.css
@@ -9,3 +9,10 @@
     margin: 0 auto;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .intro {
+    justify-items: center;
+    padding-bottom: 79px;
+  }
+}
