--- a/module1/blocks/main/main.css
+++ b/module1/blocks/main/main.css
@@ -17,12 +17,25 @@
 @media screen and (max-width: 1280px) {
   .main {
     padding-left: 0;
+    width: calc(100% - 20px);
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .main {
+    width: calc(100% - 30px);
   }
 }
 
 @media screen and (max-width: 1024px) {
   .main {
     width: calc(100% - 40px);
-    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .main {
+    padding: 90px 0;
   }
 }
