--- a/module1/blocks/slider/__item-container/slider__item-container.css
+++ b/module1/blocks/slider/__item-container/slider__item-container.css
@@ -5,3 +5,9 @@
   flex-direction: column;
   margin: 20px 0 0 30px;
 }
+
+@media screen and (max-width: 840px) {
+  .slider__item-container {
+    margin: 0 0 0 30px;
+  }
+}
