--- a/module1/blocks/slider/__title/slider__title.css
+++ b/module1/blocks/slider/__title/slider__title.css
@@ -1,7 +1,13 @@
 .slider__title {
-    font-size: 40px;
-    line-height: 1.3;
-    font-weight: 700px;
-    color: white;
-    margin: 0 0 88px 0;
+  font-size: 40px;
+  line-height: 1.3;
+  font-weight: 700px;
+  color: white;
+  margin: 0 0 88px 0;
+}
+
+@media screen and (max-width: 840px) {
+  .slider__title {
+    margin: 0 0 65px 0;
+  }
 }
