--- a/module1/blocks/slider/slider.css
+++ b/module1/blocks/slider/slider.css
@@ -8,14 +8,28 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1310px) {
+  .slider {
+    padding: 109px 0 60px 73px;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .slider {
     margin: 0 auto;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1180px) {
   .slider {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .slider {
+    padding: 20px 0 20px;
+    justify-content: center;
+    align-items: center;
   }
 }
