--- a/module1/index.css
+++ b/module1/index.css
@@ -2,6 +2,7 @@
 @import url(./vendor/fonts.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__container/header__container.css);
 @import url(./blocks/header/__nav/header__nav.css);
 @import url(./blocks/header/__nav-link/header__nav-link.css);
 @import url(./blocks/logo/logo.css);
