--- a/module1/blocks/feature/__text/feature__text.css
+++ b/module1/blocks/feature/__text/feature__text.css
@@ -5,3 +5,9 @@
   color: #4b5d68;
   max-height: 160px;
 }
+
+@media screen and (max-width: 390px) {
+  .feature__text {
+    font-size: 14px;
+  }
+}
