--- a/module1/blocks/footer/footer.css
+++ b/module1/blocks/footer/footer.css
@@ -5,3 +5,9 @@
   color: #212353;
   border-top: 2px solid rgba(156, 105, 226, 0.2);
 }
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    padding-top: 50px;
+  }
+}
