--- a/module1/blocks/intro/__img-container/intro__img-container.css
+++ b/module1/blocks/intro/__img-container/intro__img-container.css
@@ -22,3 +22,9 @@
     justify-self: center;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .intro__img-container {
+    width: calc(100% - 20px);
+  }
+}
