--- a/module1/blocks/logo/logo.css
+++ b/module1/blocks/logo/logo.css
@@ -1,4 +1,9 @@
 .logo {
   width: 49px;
   height: 35px;
+  transition: all 150ms ease-in-out;
+}
+
+.logo:hover {
+  box-shadow: 0 0 10px 0 #7f3b86 inset, 0 0 10px 4px #682c6e;
 }
