--- a/module1/blocks/slider/__item-avatar/slider__item-avatar.css
+++ b/module1/blocks/slider/__item-avatar/slider__item-avatar.css
@@ -4,3 +4,9 @@
   border-radius: 50%;
   object-fit: contain;
 }
+
+@media screen and (max-width: 500px) {
+  .slider__item-avatar {
+    margin: 10px 0 0 0;
+  }
+}
