--- a/module1/blocks/about-us/__article/about-us__article.css
+++ b/module1/blocks/about-us/__article/about-us__article.css
@@ -14,5 +14,8 @@
   .about-us__article {
     margin: 0;
     max-height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
