--- a/module1/blocks/about-us/__text/about-us__text.css
+++ b/module1/blocks/about-us/__text/about-us__text.css
@@ -9,5 +9,13 @@
   .about-us__text {
     font-size: 16px;
     margin: 30px 0 0 0;
+    width: calc(100% - 20px);
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .about-us__text {
+    font-size: 14px;
+    margin: 10px 0 0 0;
   }
 }
