--- a/module1/blocks/feature/__title/feature__title.css
+++ b/module1/blocks/feature/__title/feature__title.css
@@ -7,3 +7,9 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (max-width: 390px) {
+  .feature__title {
+    font-size: 20px;
+  }
+}
