--- a/module1/blocks/features/__subtitle/features__subtitle.css
+++ b/module1/blocks/features/__subtitle/features__subtitle.css
@@ -13,3 +13,9 @@
     margin: 30px 0 80px;
   }
 }
+
+@media screen and (max-width: 568px) {
+  .features__subtitle {
+    margin: 30px 0 50px;
+  }
+}
