--- a/module1/blocks/footer/__copyright/footer__copyright.css
+++ b/module1/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,9 @@
   letter-spacing: 0.01em;
   margin: 36px 0 0 0;
 }
+
+@media screen and (max-width: 500px) {
+  .footer__copyright {
+    margin: 20px 0;
+  }
+}
