--- a/module1/blocks/footer/__info-adress/footer__info-adress.css
+++ b/module1/blocks/footer/__info-adress/footer__info-adress.css
@@ -5,3 +5,9 @@
   letter-spacing: 0.01em;
   margin: 64px 0 10px 0;
 }
+
+@media screen and (max-width: 500px) {
+  .footer__info-adress {
+    margin: 30px 0 5px 0;
+  }
+}
