--- a/module1/blocks/footer/__main-container/footer__main-container.css
+++ b/module1/blocks/footer/__main-container/footer__main-container.css
@@ -11,3 +11,11 @@
     width: calc(100% - 40px);
   }
 }
+
+@media screen and (max-width: 500px) {
+  .footer__main-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
