--- a/module1/blocks/header/__container/header__container.css
+++ b/module1/blocks/header/__container/header__container.css
@@ -9,6 +9,17 @@
 @media screen and (max-width: 1000px) {
   .header__container {
     width: calc(100% - 230px);
-    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__container {
+    width: calc(100% - 190px);
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .header__container {
+    width: calc(100% - 20px);
   }
 }
