--- a/module1/blocks/header/__nav/header__nav.css
+++ b/module1/blocks/header/__nav/header__nav.css
@@ -3,3 +3,15 @@
   justify-content: space-between;
   width: 231px;
 }
+
+@media screen and (max-width: 500px) {
+  .header__nav {
+    width: calc(100% - 100px);
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .header__nav {
+    width: 50%;
+  }
+}
