--- a/module1/blocks/slider/__item-container/slider__item-container.css
+++ b/module1/blocks/slider/__item-container/slider__item-container.css
@@ -11,3 +11,17 @@
     margin: 0 0 0 30px;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .slider__item-container {
+    margin: 10px 0 0 0;
+    align-items: center;
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .slider__item-container {
+    max-height: 1000px;
+  }
+}
