--- a/module1/blocks/slider/__item-text/slider__item-text.css
+++ b/module1/blocks/slider/__item-text/slider__item-text.css
@@ -5,3 +5,9 @@
   max-width: 385px;
   height: 130px;
 }
+
+@media screen and (max-width: 500px) {
+  .slider__item-text {
+    text-align: center;
+  }
+}
