--- a/module1/blocks/slider/__item/slider__item.css
+++ b/module1/blocks/slider/__item/slider__item.css
@@ -45,3 +45,18 @@
     margin-right: 0;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .slider__item:first-of-type {
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .slider__item {
+    height: 100vh;
+    max-height: 400px;
+  }
+}
