--- a/module1/blocks/slider/__title/slider__title.css
+++ b/module1/blocks/slider/__title/slider__title.css
@@ -11,3 +11,15 @@
     margin: 0 0 65px 0;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .slider__title {
+    margin: 0 0 40px 0;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .slider__title {
+    margin: 0 0 20px 0;
+  }
+}
